--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,34 @@
 h1{
-	text-align: right;
+	text-align: center;
 }
 
 div{
 	font-family: Lucida,  Arial, sans seriff;
-	width: 30%;
+	width: 50%;
 	height: 80%;
-	border: 3px solid blue;
+
+	text-align: center;
+
 }
 
 body{
 	margin: 30px;
 	padding: 20px;
+	background-image: url(photoprofil.jpg);
+}
+
+table{
+	border: 3px solid black;
+	border-collapse: collapse;
+	width: 80%;
+
+}
+th, td{
+	border: 1px solid black;
+	padding: 5px;
+	text-align: center;
+}
+
+th {
+		background-color: lightgray;
 }
