--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,89 @@
+body {margin: 0;}
 
-.moncv {
-	list-style-type: none;
-	width: 60px;
-	}
-nav{
-	background-color: blue;
-}
-h1{
-	text-align: center;
+ul.topnav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
-section div{
-	font-family: Lucida,  Arial, sans seriff;
-	width: 50%;
-	height: 80%;
+ul.topnav li {float: left;}
 
-	text-align: center;
-
+ul.topnav li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
-body{
-	margin: 30px;
-	padding: 20px;
-	background-image: url(photoprofil.jpg);
+ul.topnav li a:hover:not(.active) {background-color: #111;}
+
+ul.topnav li a.active {background-color: #4CAF50;}
+
+ul.topnav li.right {float: right;}
+img  {float: right;}
+@media screen and (max-width: 600px) {
+  ul.topnav li.right, 
+  ul.topnav li {float: none;}
+}
+* {
+  box-sizing: border-box;
 }
 
-table{
-	border: 3px solid black;
-	border-collapse: collapse;
-	width: 80%;
-
-}
-th, td{
-	border: 1px solid black;
-	padding: 5px;
-	text-align: center;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-th {
-		background-color: lightgray;
+/* Style the header */
+header {
+  background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+}
+
+/* Create three unequal columns that floats next to each other */
+.Column {
+  float: left;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Left column */
+.Compétences {
+  width: 30%;
+}
+
+/* Middle column */
+.Formations {
+  width: 30%;
+}
+
+/* Left and right column */
+/* Middle column */
+.Professionnel {
+  width: 30%;
+}
+
+/* Clear floats after the columns */
+.CV:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+.footer {
+  background-color: #f1f1f1;
+  padding: 10px;
+  text-align: center;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media (max-width: 600px) {
+ .Compétences,.Formations, .Professionnel {
+    width: 100%;
+  }
 }
