--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,20 @@ ul.topnav {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #982BAE;
 }
 
 ul.topnav li {float: left;}
 
 ul.topnav li a {
   display: block;
-  color: white;
+  color: black;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px ;
   text-decoration: none;
 }
 
-ul.topnav li a:hover:not(.active) {background-color: #111;}
+ul.topnav li a:hover:not(.active) {background-color: #2B68AE;}
 
 ul.topnav li a.active {background-color: #4CAF50;}
 
@@ -38,8 +38,8 @@ body {
 
 /* Style the header */
 header {
-  background-color: #f1f1f1;
-  padding: 30px;
+  background-color: #982BAE;
+  padding: 0;
   text-align: center;
   font-size: 35px;
 }
@@ -47,24 +47,27 @@ header {
 /* Create three unequal columns that floats next to each other */
 .Column {
   float: left;
-  padding: 10px;
+  padding: 30px;
   height: 300px; /* Should be removed. Only for demonstration */
 }
 
 /* Left column */
 .Compétences {
   width: 30%;
+  background-color: #DB7BDE;
 }
 
 /* Middle column */
 .Formations {
   width: 30%;
+  background-color: #A3DE7B;
 }
 
 /* Left and right column */
 /* Middle column */
 .Professionnel {
   width: 30%;
+  background-color: #B64A84;
 }
 
 /* Clear floats after the columns */
@@ -79,6 +82,7 @@ header {
   background-color: #f1f1f1;
   padding: 10px;
   text-align: center;
+  align-self: center;
 }
 
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
